# evaluation-browser-agents

./: .env.example  README.md  pyproject.toml  tasks.jsonl  tasks_sample.jsonl
eval/: judge.py  model.py
results/: a4s-1773241954.jsonl  browser-use-1773118672.jsonl  browser-use-1773242158.jsonl  browser-use.jsonl  smooth-1772886148.jsonl
scripts/: eval_a4s.py  eval_browser_use.py  eval_smooth.py
