[project]
name = "eval"
version = "0.1.0"
description = "Evaluation of browser agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]
