[project]
name = "eval"
version = "0.1.0"
description = "Evaluation of browser agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.26.0",
    "pydantic>=2.12.5",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["eval"]
